components/alert/alert.scss
@import "../global/global";

.ring-alerts {
  overflow: visible;

  position: fixed;
  top: 0;
  right: 0;
  left: 0;

  pointer-events: none;
  z-index: $ring-alert-z-index;

  .ring-alert {
    width: $ring-unit * 55;
    box-shadow: 0 0 8px rgba(0, 0, 0, 0.15);
    text-align: left;
  }
}

.ring-alert {
  @include ring-font();

  box-sizing: border-box;
  position: relative;
  min-height: $ring-unit * 5;

  margin: $ring-unit auto;
  padding: 0 $ring-unit*2;
  border: solid 1px $ring-border-color;
  border-radius: $ring-border-radius;

  background: #FFF;
  font-size: $ring-font-size;
  line-height: $ring-unit * 5;
  white-space: nowrap;

  pointer-events: auto;

  &.ring-alert_inline {
    margin: $ring-unit;
  }
}

.ring-alert_error {
  color: $ring-error-color;
  word-wrap: break-word;
}

.ring-icon.ring-alert__icon {
  @include ring-vertical-compensation(-1px);

  display: inline-block;
  height: 40px;
  margin-right: $ring-unit;

  line-height: 40px;
  vertical-align: top;
}

.ring-alert__caption {
  display: inline-block;
  max-width: $ring-unit*46;
  margin: $ring-unit*1.5 $ring-unit*4 $ring-unit*1.5 0;

  line-height: 20px;
  vertical-align: middle;
  white-space: normal;
}

.ring-alert__loader {
  top: 3px;
  margin-right: $ring-unit;
}

.ring-alert__close {
  position: absolute;
  right: 0;
  top: 2px;

  margin: $ring-unit/2;
  padding: $ring-unit;
  line-height: normal;

  border: 0;
  background: transparent;
  cursor: pointer;

  color: $ring-gray-color;

  &:hover, &:focus {
    color: $ring-link-hover-color;
  }
}

$enter-animation-duration: 300ms;
$enter-animation-easing: ease-out;

$leave-animation-duration: 200ms;
$leave-animation-easing: ease-out;

.alert-enter {
  margin-top: -4 * $ring-unit;
  transition: margin-top $enter-animation-duration $enter-animation-easing;
}

.alert-enter.alert-enter-active {
  margin-top: $ring-unit;
}

.alert-leave {
  opacity: 1;
  transform: scale(1);
  transition: transform $leave-animation-duration $leave-animation-easing,
              opacity $leave-animation-duration $leave-animation-easing;
}

.alert-leave.alert-leave-active {
  opacity: 0;
  transform: scale(0.5);
}

